buton ismi degişti

--- a/musteri kayıt otomasyonu/Views/admin/Index.cshtml
+++ b/musteri kayıt otomasyonu/Views/admin/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Müşteri bilgileri</h2>
 <a href="/admin/Create" class="btn btn-danger">Müşteri ekle</a>
 
-<button type="button" class="btn btn-success">@Html.ActionLink("musteri git", "hepsi", new { @class = "btn btn-danger" })</button>
+<button type="button" class="btn btn-success">@Html.ActionLink("Silinen müşteriler", "hepsi", new { @class = "btn btn-danger" })</button>
       
 
 
